--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,7 +137,7 @@ iframe {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/backgrounds/background.png');
+    background-image: url('/backgrounds/background.webp');
     background-size: cover;
     background-attachment: fixed;
     /* Aplicar el filtro solo a la imagen de fondo */
@@ -150,7 +150,7 @@ iframe {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #c1c1ff46;
+    background-color: #e7d2ff45;
     /* Fondo blanco semitransparente */
 }
 
@@ -314,7 +314,7 @@ details[open] h3 {
 @keyframes fadeLeftSlide {
     0% {
         opacity: 0;
-        transform: translatex(-30px);
+        transform: translatex(-35px);
         /* Puedes ajustar la cantidad de desplazamiento */
     }
 
@@ -335,3 +335,14 @@ details[open] h3 {
         transform: scale(1);
     }
 }
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
